// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconSadSmiley /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M115 104c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm46 1c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm1.6 55.7c1.8-1.7 1.9-4.6 0-6.4A48.2 48.2 0 0 0 128 139a48 48 0 0 0-34.7 15.3 4.5 4.5 0 0 0 0 6.4 4.6 4.6 0 0 0 6.5-.1c7.9-8.1 17.8-12.6 28.2-12.6s20.4 4.5 28.2 12.6c.9.9 2 1.4 3.2 1.4 1.2-.1 2.4-.5 3.2-1.3z"
      fill="currentColor"
    />
      
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={88}
      stroke="currentColor"
      strokeMiterlimit={10}
      strokeWidth={9}
    />
  </svg>
</div>
`;

exports[`<IconSadSmiley /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconSadSmiley /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M115 104c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm46 1c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm1.6 55.7c1.8-1.7 1.9-4.6 0-6.4A48.2 48.2 0 0 0 128 139a48 48 0 0 0-34.7 15.3 4.5 4.5 0 0 0 0 6.4 4.6 4.6 0 0 0 6.5-.1c7.9-8.1 17.8-12.6 28.2-12.6s20.4 4.5 28.2 12.6c.9.9 2 1.4 3.2 1.4 1.2-.1 2.4-.5 3.2-1.3z"
      fill="currentColor"
    />
      
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={88}
      stroke="currentColor"
      strokeMiterlimit={10}
      strokeWidth={9}
    />
  </svg>
</div>
`;

exports[`<IconSadSmiley /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconSadSmiley /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M115 104c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm46 1c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm1.6 55.7c1.8-1.7 1.9-4.6 0-6.4A48.2 48.2 0 0 0 128 139a48 48 0 0 0-34.7 15.3 4.5 4.5 0 0 0 0 6.4 4.6 4.6 0 0 0 6.5-.1c7.9-8.1 17.8-12.6 28.2-12.6s20.4 4.5 28.2 12.6c.9.9 2 1.4 3.2 1.4 1.2-.1 2.4-.5 3.2-1.3z"
      fill="currentColor"
    />
      
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={88}
      stroke="currentColor"
      strokeMiterlimit={10}
      strokeWidth={9}
    />
  </svg>
</div>
`;

exports[`<IconSadSmiley /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconSadSmiley /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M115 104c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm46 1c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm1.6 55.7c1.8-1.7 1.9-4.6 0-6.4A48.2 48.2 0 0 0 128 139a48 48 0 0 0-34.7 15.3 4.5 4.5 0 0 0 0 6.4 4.6 4.6 0 0 0 6.5-.1c7.9-8.1 17.8-12.6 28.2-12.6s20.4 4.5 28.2 12.6c.9.9 2 1.4 3.2 1.4 1.2-.1 2.4-.5 3.2-1.3z"
      fill="currentColor"
    />
      
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={88}
      stroke="currentColor"
      strokeMiterlimit={10}
      strokeWidth={9}
    />
  </svg>
</div>
`;

exports[`<IconSadSmiley /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconSadSmiley /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M115 104c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm46 1c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm1.6 55.7c1.8-1.7 1.9-4.6 0-6.4A48.2 48.2 0 0 0 128 139a48 48 0 0 0-34.7 15.3 4.5 4.5 0 0 0 0 6.4 4.6 4.6 0 0 0 6.5-.1c7.9-8.1 17.8-12.6 28.2-12.6s20.4 4.5 28.2 12.6c.9.9 2 1.4 3.2 1.4 1.2-.1 2.4-.5 3.2-1.3z"
      fill="currentColor"
    />
      
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={88}
      stroke="currentColor"
      strokeMiterlimit={10}
      strokeWidth={9}
    />
  </svg>
</div>
`;

exports[`<IconSadSmiley /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconSadSmiley /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M115 104c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm46 1c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm1.6 55.7c1.8-1.7 1.9-4.6 0-6.4A48.2 48.2 0 0 0 128 139a48 48 0 0 0-34.7 15.3 4.5 4.5 0 0 0 0 6.4 4.6 4.6 0 0 0 6.5-.1c7.9-8.1 17.8-12.6 28.2-12.6s20.4 4.5 28.2 12.6c.9.9 2 1.4 3.2 1.4 1.2-.1 2.4-.5 3.2-1.3z"
      fill="currentColor"
    />
      
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={88}
      stroke="currentColor"
      strokeMiterlimit={10}
      strokeWidth={9}
    />
  </svg>
</div>
`;

exports[`<IconSadSmiley /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconSadSmiley /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M115 104c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm46 1c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm1.6 55.7c1.8-1.7 1.9-4.6 0-6.4A48.2 48.2 0 0 0 128 139a48 48 0 0 0-34.7 15.3 4.5 4.5 0 0 0 0 6.4 4.6 4.6 0 0 0 6.5-.1c7.9-8.1 17.8-12.6 28.2-12.6s20.4 4.5 28.2 12.6c.9.9 2 1.4 3.2 1.4 1.2-.1 2.4-.5 3.2-1.3z"
      fill="currentColor"
    />
      
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={88}
      stroke="currentColor"
      strokeMiterlimit={10}
      strokeWidth={9}
    />
  </svg>
</div>
`;

exports[`<IconSadSmiley /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconSadSmiley /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M115 104c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm46 1c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm1.6 55.7c1.8-1.7 1.9-4.6 0-6.4A48.2 48.2 0 0 0 128 139a48 48 0 0 0-34.7 15.3 4.5 4.5 0 0 0 0 6.4 4.6 4.6 0 0 0 6.5-.1c7.9-8.1 17.8-12.6 28.2-12.6s20.4 4.5 28.2 12.6c.9.9 2 1.4 3.2 1.4 1.2-.1 2.4-.5 3.2-1.3z"
      fill="currentColor"
    />
      
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={88}
      stroke="currentColor"
      strokeMiterlimit={10}
      strokeWidth={9}
    />
  </svg>
</div>
`;

exports[`<IconSadSmiley /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconSadSmiley /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M115 104c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm46 1c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm1.6 55.7c1.8-1.7 1.9-4.6 0-6.4A48.2 48.2 0 0 0 128 139a48 48 0 0 0-34.7 15.3 4.5 4.5 0 0 0 0 6.4 4.6 4.6 0 0 0 6.5-.1c7.9-8.1 17.8-12.6 28.2-12.6s20.4 4.5 28.2 12.6c.9.9 2 1.4 3.2 1.4 1.2-.1 2.4-.5 3.2-1.3z"
      fill="currentColor"
    />
      
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={88}
      stroke="currentColor"
      strokeMiterlimit={10}
      strokeWidth={9}
    />
  </svg>
</div>
`;

exports[`<IconSadSmiley /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconSadSmiley /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M115 104c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm46 1c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm1.6 55.7c1.8-1.7 1.9-4.6 0-6.4A48.2 48.2 0 0 0 128 139a48 48 0 0 0-34.7 15.3 4.5 4.5 0 0 0 0 6.4 4.6 4.6 0 0 0 6.5-.1c7.9-8.1 17.8-12.6 28.2-12.6s20.4 4.5 28.2 12.6c.9.9 2 1.4 3.2 1.4 1.2-.1 2.4-.5 3.2-1.3z"
      fill="currentColor"
    />
      
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={88}
      stroke="currentColor"
      strokeMiterlimit={10}
      strokeWidth={9}
    />
  </svg>
</div>
`;

exports[`<IconSadSmiley /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconSadSmiley /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M115 104c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm46 1c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm1.6 55.7c1.8-1.7 1.9-4.6 0-6.4A48.2 48.2 0 0 0 128 139a48 48 0 0 0-34.7 15.3 4.5 4.5 0 0 0 0 6.4 4.6 4.6 0 0 0 6.5-.1c7.9-8.1 17.8-12.6 28.2-12.6s20.4 4.5 28.2 12.6c.9.9 2 1.4 3.2 1.4 1.2-.1 2.4-.5 3.2-1.3z"
      fill="currentColor"
    />
      
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={88}
      stroke="currentColor"
      strokeMiterlimit={10}
      strokeWidth={9}
    />
  </svg>
</div>
`;

exports[`<IconSadSmiley /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconSadSmiley /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M115 104c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm46 1c0 5.5-4.5 10-10 10s-10-4.5-10-10 4.5-10 10-10 10 4.5 10 10zm1.6 55.7c1.8-1.7 1.9-4.6 0-6.4A48.2 48.2 0 0 0 128 139a48 48 0 0 0-34.7 15.3 4.5 4.5 0 0 0 0 6.4 4.6 4.6 0 0 0 6.5-.1c7.9-8.1 17.8-12.6 28.2-12.6s20.4 4.5 28.2 12.6c.9.9 2 1.4 3.2 1.4 1.2-.1 2.4-.5 3.2-1.3z"
      fill="currentColor"
    />
      
    <circle
      cx={128}
      cy={128}
      fill="none"
      r={88}
      stroke="currentColor"
      strokeMiterlimit={10}
      strokeWidth={9}
    />
  </svg>
</div>
`;

exports[`<IconSadSmiley /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
